WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20851
REGRESSION (
r36410
): fast/js/kde/GlobalObject.html fails
https://bugs.webkit.org/show_bug.cgi?id=20851
Summary
REGRESSION (r36410): fast/js/kde/GlobalObject.html fails
Cameron Zwarich (cpst)
Reported
2008-09-15 01:39:24 PDT
-PASS parseInt(1234567890123456) is 1234567890123456 +FAIL parseInt(1234567890123456) should be 1234567890123456. Was 1015724736.
Attachments
Proposed patch
(4.21 KB, patch)
2008-09-15 02:31 PDT
,
Cameron Zwarich (cpst)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Cameron Zwarich (cpst)
Comment 1
2008-09-15 02:31:08 PDT
Created
attachment 23433
[details]
Proposed patch
Cameron Zwarich (cpst)
Comment 2
2008-09-15 02:39:46 PDT
Landed in
r36434
.
Cameron Zwarich (cpst)
Comment 3
2008-09-16 00:19:23 PDT
Comment on
attachment 23433
[details]
Proposed patch Oops, Maciej never set a review flag on this. I'll remove it.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug